--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   </head>
   <body>
     <header>
-      <h1 name="top">Widget Sorter - Progress Check-in</h1>
+      <h1>Widget Sorter - Progress Check-in</h1>
       <h2>Progress Check-in for Implementation of a Widget Sorter</h2>
       <h2>4/11/2023</h2>
       <p>Minutes recorded by Joseph Del Val, A14590606</p>
     </header>
     <main>
       <section>
-        <img src="images/stopwatch.jpg" width="200">
+        <img src="images/stopwatch.jpg" alt="Miki's stopwatch from Reovlutionary Girl Utena" width="200">
         <p>Pictured above: the stopwatch recoding the literal minutes of the meeting.</p>
         <h3>Attendance List:</h3>
         <ul>
@@ -59,7 +59,7 @@
       <section>
         <h3>Pierre Menard's progress update</h3>
         <p>Pierre Menard demonstrated his new <a href="https://en.wikipedia.org/wiki/Bogosort">Bogosort</a> implementation. Below is Funes's reaction to the algorithm.</p>
-        <audio src="images/reaction.mp3" type="audio/mpeg" controls></audio>
+        <audio src="images/reaction.mp3" controls></audio>
         <p>Below, is Menard's <i>Video demonstration</i> of the algorithm</p>
         <video width="480" height="360" controls>
           <source src="images/bogosort.mov">
