add div, span, form attrs

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </section>
       <section>
         <h3>Pierre Menard's progress update</h3>
-        <p>Pierre Menard demonstrated his new <a href="https://en.wikipedia.org/wiki/Bogosort">Bogosort</a> implementation. Below is Funes's reaction to the algorithm.</p>
+        <div><p>Pierre Menard demonstrated his <span><i>new </i></span><a href="https://en.wikipedia.org/wiki/Bogosort">Bogosort</a> implementation. Below is Funes's reaction to the algorithm.</p></div>
         <audio src="images/reaction.mp3" controls></audio>
         <p>Below, is Menard's <i>Video demonstration</i> of the algorithm</p>
         <video width="480" height="360" controls>
@@ -68,7 +68,7 @@
       </section>
       <section>
         <h3>Literature Poll</h3>
-        <form>
+        <form action="/action_page.php" method="get">
           <fieldset>
             <legend>Enter literature preferences below</legend>
             <label>Do you like literature?</label><br>
